# underground-scraper

./: .gitignore  .gitmodules  Cargo.toml  README.md  apply_patch.py  work.mjs
doc/: main.bib  main.tex
patches/: axum-0.7.5.patch  axum-core-0.4.3.patch  bb8-0.8.5.patch  bb8-postgres-0.8.1.patch  compact_str-0.7.1.patch  compact_str-0.8.0.patch  dashmap-6.0.1.patch  grammers-353882a.patch  grammers-49aa302.patch  grammers-5bb078b.patch  grammers-8a87bb2.patch  grammers-b733d70.patch  grammers-bb46ef0.patch  grammers-c615963.patch  grammers-c631a42.patch  grammers-c860631.patch  grammers-d04f4a2.patch  grammers-d180f02.patch  grammers.patch  hashbrown-0.14.5.patch  hashbrown-0.15.1.patch  hashbrown-0.15.2.patch  hashbrown-0.15.4.patch  httpdate-1.0.3.patch  hyper-1.4.1.patch  hyper-util-0.1.10.patch  hyper-util-0.1.11.patch  hyper-util-0.1.14.patch  postgres-types-0.2.7.patch  postgres-types-0.2.8.patch  postgres-types-0.2.9.patch  postgres-types.patch  rpassword-7.3.1.patch  rpassword-7.4.0.patch  tokio-postgres-0.7.11.patch  tokio-postgres-0.7.12.patch  tokio-postgres-0.7.13.patch  tokio-postgres.patch
slide/: slide.tex
src/: db.rs  lib.rs  scrape.rs  util.rs
src/accsmarket/: main.rs  scrape.rs
src/blackhatworld/: main.rs  scrape.rs
src/blackhatworld-server/: main.rs  service.rs
src/blackhatworld-worker/: browser.rs  main.rs  worker.rs
src/ezkify/: main.rs  parse_item.rs
src/ezkify/parse_item/: dripfeedpanel.rs  ezkify.rs  smmrapid.rs
src/hackforums/: main.rs  scrape.rs
src/hackforums-inner/: main.rs  service.rs
src/scrape/: puppeteer.rs
src/telegram/: db.rs  extract.rs  main.rs  ping.rs  telegram.rs
src/telegram/telegram/: client.rs  types.rs
telegram/: config.json.example
