cargo-features = ["edition2024"]

[package]
name = "t2"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
bb8-postgres = { version = "0.8.1", features = ["with-serde_json-1"] }
bytes = { version = "1.6.0", features = ["serde"] }
compact_str = { version = "0.7.1", features = ["serde"] }
fantoccini = "0.19.3"
futures-util = "0.3.30"
hashbrown = "0.14.3"
httpdate = "1.0.3"
log = { version = "0.4.21", features = ["release_max_level_info"] }
postgres-protocol = "0.6.6"
pretty_env_logger = "0.5.0"
regex = "1.10.4"
reqwest = { version = "0.11.27", features = ["json"] }
rmp = "0.8.12"
rmp-serde = "1.1.2"
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["float_roundtrip"] }
tokio = { version = "1.36.0", features = ["macros", "parking_lot", "rt-multi-thread", "tracing"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
tracing = { version = "0.1.40", features = ["log", "release_max_level_info"] }

[features]
bt = []

[[bin]]
name = "accsmarket"
path = "src/accsmarket/main.rs"

[[bin]]
name = "hackforums"
path = "src/hackforums/main.rs"

[lib]
name = "t2"
path = "src/lib.rs"
